# regen

./: .gitignore  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  TASK.md  examples.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
examples/: launch_pattern.py  numeric_pattern.py
regen/: __init__.py  regex_generator.py
tests/: test_regex_generator.py
tests/benchmarks/: test_performance.py
tests/integration/: test_edge_cases.py  test_pattern_generation.py  test_unicode_operations.py
tests/unit/: __init__.py  test_edge_cases.py  test_optimizer.py  test_property_files.py  test_regex_generator.py  test_script_definition_parser.py  test_unicode_data.py
unicode_regex/: README.md  __init__.py  code_point_set.py  optimizer.py  regex_generator.py  unicode_data.py
unicode_regex/data/: Blocks.txt  Scripts.txt  decimal.txt  name.txt  numeric.txt
unicode_regex/tests/: __init__.py  test_unicode_data.py
unicode_regex/tests/integration/: test_regex_generation.py
unicode_regex/tests/unit/: test_code_point_set.py  test_optimizer.py  test_regex_generator.py  test_unicode_data.py
