[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "regen"
version = "0.1.0"
description = "A Python library for generating optimized regular expressions with Unicode support"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Thomas Dill", email = "thomas@example.com" },
]
keywords = ["regex", "regular expressions", "pattern generation", "unicode"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: General",
]
dependencies = [
    "pytest>=8.3.5",
]

[project.urls]
Homepage = "https://github.com/dillionaire/regen"
Documentation = "https://github.com/dillionaire/regen/wiki"
Repository = "https://github.com/dillionaire/regen.git"
Issues = "https://github.com/dillionaire/regen/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "black>=23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["unicode_regex"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=regen"
testpaths = [
    "tests",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.coverage.run]
source = ["regen"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
ignore_errors = true
omit = [
    "tests/*",
    "setup.py",
]

[tool.ruff]
select = ["E", "F", "B"]
ignore = []
line-length = 100

[tool.uv]
requirements = ["requirements.txt"]
requirements-dev = ["requirements-dev.txt"]
venv = ".venv"
